syntax = "proto3";

// package should match with the folder structure.
package book.v1;

import "google/api/field_behavior.proto";
// import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "book/v1/author.proto";

enum BookStatus {
    BOOK_STATUS_UNSPECIFIED = 0;
    BOOK_STATUS_CREATED = 1;
    BOOK_STATUS_ACTIVE = 2;
    BOOK_STATUS_OFFLINE = 3;
}

enum BookCategory {
    BOOK_CATEGORY_UNSPECIFIED = 0;
    BOOK_CATEGORY_JAVA = 1;
    BOOK_CATEGORY_GO = 2;
    BOOK_CATEGORY_MATH = 3;
}

message CreateBookRequest {
    string title = 1 [
        (google.api.field_behavior) = REQUIRED,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "The title of the book",
            example: "gRPC Practices"
        },
        (buf.validate.field).string.min_len = 1,
        (buf.validate.field).string.max_len = 100
    ];
    string description = 2 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "The description of the book",
            example: "This is a book about gRPC"
        }
    ];
    uint32 amount = 3 [
        (buf.validate.field).uint32.gt = 1,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "The amount of the book",
            example: "100"
        }
    ];
    float price = 4 [
        (buf.validate.field).float.gt = 0,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "The price of the book",
            example: "12.34"
        }
    ];
    BookCategory category = 5 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "The category of the book",
            example: "JAVA"
        }
    ];
    Author author = 6;
    string email = 7 [(buf.validate.field).string.min_len = 0, (buf.validate.field).string.email = true];
    string cover_url = 8 [(buf.validate.field).string.min_len = 0, (buf.validate.field).string.uri = true];
}

message CreateBookResponse {
    BookInfo book = 1;
    bool success = 2;
}

message UpdateBookRequest {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    uint32 amount = 4;
    float price = 5;
    BookCategory category = 6;
    Author author = 7;
}

message UpdateBookResponse {
    BookInfo book = 1;
    bool success = 2;
}

message DeleteBookRequest {
    uint32 id = 1;
}

message DeleteBookResponse {
    uint32 id = 1;
    bool success = 2;
}

message UpdateBookStatusRequest {
    uint32 id = 1;
    BookStatus status = 2;
}

message GetBookRequest {
    uint32 id = 1;
}

message GetBookResponse {
    BookInfo book = 1;
}

message QueryBooksRequest {
    optional BookCategory category = 1;
    optional BookStatus status = 2;
    //
    uint32 page_size = 3;
    uint32 page_index = 4;
    optional uint32 cursor_id = 5;
}

message BookInfo {
    uint32 id = 1;
    string title = 2;
    string description = 3;
    Author author = 4;
    uint32 amount = 5;
    float price = 6;
    BookCategory category = 7;
    BookStatus status = 8;
    google.protobuf.Timestamp create_time = 9;
    google.protobuf.Timestamp update_time = 10;
    google.protobuf.Timestamp delete_time = 11;
    bool deleted = 12;
}

message Pagination {
    uint32 page_size = 2;
    uint32 page_index = 3;
    uint32 total_pages = 4;
    bool has_next = 5;
    bool has_previous = 6;
    uint32 total_items = 7;
}

message QueryBooksResponse {
    repeated BookInfo books = 1;
    Pagination page_info  = 2;
}